collecting jobdisplay elements from active tab

--- a/chrome_extension/hello.html
+++ b/chrome_extension/hello.html
@@ -1,5 +1,10 @@
 <html>
-  <body>
-    <h1>Hello Extensions</h1>
-  </body>
+<head>
+    <title>Schedule</title>
+</head>
+<body bgcolor="#007ab4">
+    <h1>WFM Schedule Loader</h1>
+    <button id="load_schedule_btn">Load Schedule</button>
+    <script src="scripts/main.js"></script>
+</body>
 </html>
