--- a/chrome_extension/hello.html
+++ b/chrome_extension/hello.html
@@ -1,10 +1,53 @@
 <html>
 <head>
     <title>Schedule</title>
+    <style>
+        body {
+            background-color: #007ab4;
+            font-family: "Roboto", Arial, sans-serif;
+            color: #fff;
+            text-align: center;
+            margin: 0;
+            padding: 0;
+        }
+
+        div {
+            margin: 20px;
+        }
+
+        h1 {
+            margin-top: 50px;
+            font-size: 2.5em;
+        }
+
+        button {
+            background-color: #ffffff;
+            color: #007ab4;
+            border: none;
+            padding: 15px 30px;
+            font-size: 1.2em;
+            border-radius: 5px;
+            cursor: pointer;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
+            transition: all 0.3s ease;
+        }
+
+        button:hover {
+            background-color: #005f8a;
+            color: #ffffff;
+            transform: scale(1.05);
+        }
+
+        button:active {
+            transform: scale(0.95);
+        }
+    </style>
 </head>
-<body bgcolor="#007ab4">
-    <h1>WFM Schedule Loader</h1>
-    <button id="load_schedule_btn">Load Schedule</button>
+<body>
+<div>
+    <h2>WFM Schedule Loader</h2>
+    <button id="load_schedule_btn">Download Weekly Schedule</button>
     <script src="scripts/main.js"></script>
+</div>
 </body>
 </html>
